--- a/ddp-workspace/projects/study-builder-ui/src/app/survey-editor/survey-editor.component.scss
+++ b/ddp-workspace/projects/study-builder-ui/src/app/survey-editor/survey-editor.component.scss
@@ -2,10 +2,12 @@
   height: 70px;
   border: 2px solid blue;
 }
+/*
 .two {
   border-color: gray;
   border-style: dashed;
 }
+*/
 .two_one {
   color: red;
   border-color: red;
