--- a/ddp-workspace/projects/study-builder-ui/src/app/activity/activity.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/activity/activity.component.html
@@ -1,28 +1,15 @@
 <main>
-  <section *ngIf="subtitle" class="section sticky-section">
-    <div class="content content_tight">
-      <div class="sticky-block" [innerHTML]="subtitle"></div>
-    </div>
-  </section>
-  <section *ngIf="title" class="section header-section">
-    <div class="content content_tight">
-      <h1 class="activity-header" [innerHTML]="title"></h1>
+  <section>
+    <div class="metadata">
+      <div>
+        <strong>Activity Code:</strong> {{activity.activityCode}}
+      </div>
+      <div *ngIf="title">
+        <strong>Title:</strong> <span [innerHtml]="title"></span>
+      </div>
     </div>
   </section>
   <section class="section">
-  <app-section [section]="activity.sections[0]"></app-section>
-  </section>
-  <section>
-    <div class="content content_tight">
-      <ng-container *ngIf="shouldShowReadonlyHint">
-        <div class="infobox" [innerHTML]="readonlyHint">
-        </div>
-      </ng-container>
-<!--      <activity-section></activity-section>-->
-      <ng-container *ngIf="shouldShowReadonlyHint">
-        <div class="infobox" [innerHTML]="readonlyHint">
-        </div>
-      </ng-container>
-    </div>
+    <app-section [section]="activity.sections[0]"></app-section>
   </section>
 </main>
