--- a/ddp-workspace/projects/study-builder-ui/src/app/survey-component-palette/survey-component-palette.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/survey-component-palette/survey-component-palette.component.html
@@ -1,1 +1,7 @@
-<p>survey-component-palette works!</p>
+<p>survey-component-palette here!</p>
+<div>
+<button>add content block</button>
+</div>
+<div>
+<button>add text question</button>
+</div>
