--- a/ddp-workspace/projects/study-builder-ui/src/app/survey-editor/survey-editor.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/survey-editor/survey-editor.component.html
@@ -15,12 +15,12 @@
 
   <div fxLayout="row" class="zero">
 
-    <div fxFlex="500px" fxLayout="column" class="one">
+    <div fxFlex="500px" fxLayout="column" class="left-panel">
       <app-survey-component-palette></app-survey-component-palette>
       <app-survey-component-editor></app-survey-component-editor>
     </div>
 
-    <div fxFlex="100%" class="two">
+    <div fxFlex="100%" class="right-canvas-panel">
       <app-survey-canvas [activity]="currentActivity$ | async"></app-survey-canvas>
     </div>
   </div>
