Add content block to model and canvas

--- a/ddp-workspace/projects/study-builder-ui/src/app/section/section.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/section/section.component.html
@@ -3,8 +3,10 @@
     </ng-container>
 
     <ng-template #hasBlocks>
-        <div>
-            has blocks
+        <div *ngFor="let block of section.blocks">
+            <div *ngIf="block.blockType === 'CONTENT'">
+                Got your content right heah!
+            </div>
         </div>
     </ng-template>
 
