--- a/ddp-workspace/projects/study-builder-ui/src/app/survey-component-palette/survey-component-palette.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/survey-component-palette/survey-component-palette.component.html
@@ -3,5 +3,5 @@
 <button (click)="addContentBlock()">add content block</button>
 </div>
 <div>
-<button>add text question</button>
+<button (click)="addTextQuestionBlock()">add text question</button>
 </div>
