hack: tiny editor

--- a/ddp-workspace/projects/study-builder-ui/src/app/content-block/content-block.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/content-block/content-block.component.html
@@ -1,2 +1,8 @@
-<div *ngIf="title" [innerHTML]="title"></div>
-<div class="ddp-content" [innerHTML]="content"></div>
+<div class="content-block-container">
+    <h3>Content Block</h3>
+    <editor
+        [init]="editorInit()"
+        [initialValue]="initialContent()"
+        (onChange)="onContentChange($event)">
+    </editor>
+</div>
