WIP. Adding skeleton of block/component selection. Skeleton text question editor

--- a/ddp-workspace/projects/study-builder-ui/src/app/survey-component-editor/survey-component-editor.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/survey-component-editor/survey-component-editor.component.html
@@ -1,1 +1,3 @@
-<p>survey-component-editor works!</p>
+{{ (currentBlock$ | async)?.blockType }}
+<app-text-question-editor *ngIf="isTextQuestionBlock()" [questionBlock]="currentQuestionBlock$ | async"></app-text-question-editor>
+
