--- a/ddp-workspace/projects/study-builder-ui/src/app/section/section.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/section/section.component.html
@@ -3,7 +3,7 @@
     </ng-container>
 
     <ng-template #hasBlocks>
-        <div *ngFor="let block of section.blocks" class="Ha!">
+        <div *ngFor="let block of section.blocks; index as i" (click)="blockSelected(block)" [ngClass]="{'selection-highlight': block === (selectedBlock$ | async)}">
             <app-content-block *ngIf="block.blockType === 'CONTENT'" [block]="block">
             </app-content-block>
             <app-text-question-block *ngIf="block.blockType === 'QUESTION' && block.question.questionType === 'TEXT'" [block]="block">
@@ -18,72 +18,3 @@
     </ng-template>
 </ng-container>
 
-<!-- <ng-container *ngIf="section"> -->
-<!-- <div class="margin-bottom" *ngFor="let block of section.blocks"> -->
-<!--  <ng-container *ngIf="displayNumber; then numbered else notNumbered">-->
-<!--  </ng-container>-->
-
-<!--  <ng-template #numbered>-->
-<!--    <ol class="ddp-list">-->
-<!--      <li class="ddp-li" [value]="displayNumber">-->
-<!--        <ng-container *ngTemplateOutlet="content"></ng-container>-->
-<!--      </li>-->
-<!--    </ol>-->
-<!--  </ng-template>-->
-
-<!--  <ng-template #notNumbered>-->
-<!--    <div class="ddp-single-question">-->
-<!--      <ng-container *ngTemplateOutlet="content"></ng-container>-->
-<!--    </div>-->
-<!--  </ng-template>-->
-
-<!--  <ng-template #content>-->
-<!--    <div [ngSwitch]="block.blockType">-->
-<!--      <ddp-conditional-block *ngSwitchCase="'CONDITIONAL'"-->
-<!--                             [block]="block"-->
-<!--                             [readonly]="readonly"-->
-<!--                             [validationRequested]="validationRequested"-->
-<!--                             [studyGuid]="studyGuid"-->
-<!--                             [activityGuid]="activityGuid">-->
-<!--      </ddp-conditional-block>-->
-<!--      <ddp-activity-question *ngSwitchCase="'QUESTION'"-->
-<!--                             [block]="block"-->
-<!--                             [readonly]="readonly"-->
-<!--                             [validationRequested]="validationRequested"-->
-<!--                             [studyGuid]="studyGuid"-->
-<!--                             [activityGuid]="activityGuid">-->
-      <!-- </ddp-activity-question> -->
-<!--      <ddp-activity-content *ngSwitchCase="'CONTENT'"-->
-<!--                            [block]="block">-->
-<!--      </ddp-activity-content>-->
-<!--      <ddp-group-block *ngSwitchCase="'GROUP'"-->
-<!--                       [block]="block"-->
-<!--                       [readonly]="readonly"-->
-<!--                       [validationRequested]="validationRequested"-->
-<!--                       [studyGuid]="studyGuid"-->
-<!--                       [activityGuid]="activityGuid">-->
-<!--      </ddp-group-block>-->
-<!--      <ng-container *ngSwitchCase="'COMPONENT'">-->
-<!--        <ng-container *ngSwitch="block.componentType">-->
-<!--          <ddp-institutions-form *ngSwitchCase="'INSTITUTION'"-->
-<!--                                 [block]="block"-->
-<!--                                 [studyGuid]="studyGuid"-->
-<!--                                 [readonly]="readonly"-->
-<!--                                 [validationRequested]="validationRequested">-->
-<!--          </ddp-institutions-form>-->
-
-
-<!--            <ddp-address-embedded *ngSwitchCase="'MAILING_ADDRESS'"-->
-<!--                                  [block]="block"-->
-<!--                                  [readonly]="readonly"-->
-<!--                                  [activityGuid]="activityGuid"-->
-<!--                                  [validationRequested]="validationRequested">-->
-<!--            </ddp-address-embedded>-->
-<!--        </ng-container>-->
-<!--      </ng-container>-->
-<!--    </div>-->
-<!--  </ng-template>-->
-
-<!--</div>-->
-<!--</ng-container>-->
-<!-- <div></div> -->
