WIP for study builder ui. text question editor

--- a/ddp-workspace/projects/study-builder-ui/src/app/text-question-editor/text-question-editor.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/text-question-editor/text-question-editor.component.html
@@ -1,1 +1,28 @@
-<p [innerHTML]="questionBlock"></p>
+<form [formGroup]="formGroup" class="container">
+    <div>
+    <mat-form-field>
+        <mat-label>GUID</mat-label>
+    <input matInput
+           formControlName="stableId" required>
+    </mat-form-field>
+    </div>
+    <div>
+        <mat-label>Input Type</mat-label>
+        <mat-radio-group formControlName="inputType" class="radio-group">
+            <mat-radio-button  value="TEXT">Text</mat-radio-button>
+
+            <mat-radio-button  value="ESSAY">Essay</mat-radio-button>
+
+            <mat-radio-button  value="EMAIL">Email</mat-radio-button>
+
+            <mat-radio-button  value="SIGNATURE">Signature</mat-radio-button>
+        </mat-radio-group>
+    </div>
+    <div class="validations">
+        <mat-label>Validations</mat-label>
+        <mat-checkbox formControlName="required">Required</mat-checkbox>
+    </div>
+
+
+
+</form>
