--- a/ddp-workspace/projects/study-builder-ui/src/app/survey-component-editor/survey-component-editor.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/survey-component-editor/survey-component-editor.component.html
@@ -1,3 +1,3 @@
 {{ (currentBlock$ | async)?.blockType }}
-<app-text-question-editor *ngIf="isTextQuestionBlock()" [questionBlock]="currentQuestionBlock$ | async"></app-text-question-editor>
+<app-text-question-editor *ngIf="isTextQuestionBlock$ | async" [questionBlock]="currentBlock$ | async"></app-text-question-editor>
 
