--- a/ddp-workspace/projects/study-builder-ui/src/app/text-question-editor/text-question-editor.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/text-question-editor/text-question-editor.component.html
@@ -1,10 +1,16 @@
 <form [formGroup]="formGroup" class="container">
     <div>
     <mat-form-field>
-        <mat-label>GUID</mat-label>
+        <mat-label>stableId</mat-label>
     <input matInput
            formControlName="stableId" required>
     </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field>
+            <mat-label>Question Prompt</mat-label>
+            <textarea matInput matTextareaAutosize matAutosizeMinRows="3" formControlName="prompt" required></textarea>
+        </mat-form-field>
     </div>
     <div>
         <mat-label>Input Type</mat-label>
