Implement top/bottom location of dialog
  depending on the delete button position

--- a/ddp-workspace/projects/ddp-osteo/src/styles/family-history.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles/family-history.scss
@@ -286,9 +286,9 @@
         }
     }
 
-    .activity-block {
+    .modal-activity-block, .activity-block {
         &__delete-dialog > mat-dialog-container {
-            overflow: hidden;
+            padding: 24px !important;
         }
     }
 
