--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityDeleteDialog/activityDeleteDialog.component.scss
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityDeleteDialog/activityDeleteDialog.component.scss
@@ -1,3 +1,6 @@
+$dialog-arrow-width: 20px;
+$dialog-arrow-half-width: $dialog-arrow-width / 2;
+
 .activity-block {
 
     &__delete-dialog {
@@ -33,16 +36,29 @@
         }
 
         @media (min-width: 1260px) {
-            &:after { // arrow
+            &.on-top:after { // arrow below a dialog
                 content: " ";
                 position: relative;
                 height: 0;
                 right: 50%;
                 bottom: -100%;
-                border-top: 10px solid white;
-                border-right: 10px solid transparent;
-                border-left: 10px solid transparent;
+                border-top: $dialog-arrow-half-width solid white;
+                border-right: $dialog-arrow-half-width solid transparent;
+                border-left: $dialog-arrow-half-width solid transparent;
                 border-bottom: none;
+            }
+
+            &.on-bottom:before { // arrow above a dialog
+                content: " ";
+                position: relative;
+                height: 0;
+                left: 50%;
+                top: -$dialog-arrow-half-width;
+                border-top: none;
+                border-right: $dialog-arrow-half-width solid transparent;
+                border-left: $dialog-arrow-half-width solid transparent;
+                border-bottom: $dialog-arrow-half-width solid white;
+                z-index: 10;
             }
         }
     }
