DDP-5770: Angular support for adding and deleting EMBEDDED child instances (#502)
Support adding and deleting EMBEDDED child instances

--- a/ddp-workspace/projects/ddp-osteo/src/styles/family-history.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles/family-history.scss
@@ -228,14 +228,16 @@
         line-height: 24px;
     }
 
+    &__card-content {
+        line-height: 30px;
+    }
+}
+
+.activity-block {
     &__delete-dialog-buttons {
         .ctrl-btn {
             font-size: 1rem;
         }
-    }
-
-    &__card-content {
-        line-height: 30px;
     }
 }
 
@@ -282,9 +284,11 @@
         &__save_activity {
             margin-top: 8px !important;
         }
+    }
 
+    .modal-activity-block, .activity-block {
         &__delete-dialog > mat-dialog-container {
-            overflow: hidden;
+            padding: 24px !important;
         }
     }
 
