WIP on StudyBuilder. Cleaned up stuff. Wired subject directly to section. Need to look at wiring subjects to block components

--- a/ddp-workspace/projects/study-builder-ui/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/components/activity/activity.component.html
@@ -10,6 +10,6 @@
     </div>
   </section>
   <section class="section">
-    <app-section *ngIf="sections.length > 0" [section]="sections[0]"></app-section>
+    <app-section *ngIf="sections.length > 0"></app-section>
   </section>
 </main>
