--- a/ddp-workspace/projects/study-builder-ui/src/app/components/section/section.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/components/section/section.component.html
@@ -1,12 +1,13 @@
-<ng-container *ngIf="section">
+<ng-container *ngIf="section$ | async as section">
     <ng-container *ngIf="section.blocks.length > 0; then hasBlocks else noBlocks">
     </ng-container>
 
     <ng-template #hasBlocks>
+        <div>I got {{section.blocks.length}} blocks</div>
         <div *ngFor="let block of section.blocks; index as i" (click)="blockSelected(block)" [ngClass]="{'selection-highlight': block === (selectedBlock$ | async)}">
             <app-content-block *ngIf="block.blockType === 'CONTENT'" [block]="block">
             </app-content-block>
-            <app-text-question-block *ngIf="block.blockType === 'QUESTION' && block.question.questionType === 'TEXT'" [block]="block">
+            <app-text-question-block *ngIf="block.blockType === 'QUESTION' && block.question.questionType === 'TEXT'" [definitionBlock]="block">
             </app-text-question-block>
         </div>
     </ng-template>
