--- a/ddp-workspace/projects/study-builder-ui/src/app/components/section/section.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/components/section/section.component.html
@@ -4,11 +4,14 @@
 
     <ng-template #hasBlocks>
         <div>I got {{section.blocks.length}} blocks</div>
-        <div *ngFor="let block of section.blocks; index as i" (click)="blockSelected(block)" [ngClass]="{'selection-highlight': block === (selectedBlock$ | async)}">
+        <div>I got {{blockSubjects.length}} blocks subjects</div>
+        <div *ngFor="let blockSubject of blockSubjects; index as i" (click)="blockSelected(blockSubject)" [ngClass]="{'selection-highlight': blockSubject.value === (selectedBlock$ | async)}">
+            <ng-container *ngIf="blockSubject | async as block">
             <app-content-block *ngIf="block.blockType === 'CONTENT'" [block]="block">
             </app-content-block>
             <app-text-question-block *ngIf="block.blockType === 'QUESTION' && block.question.questionType === 'TEXT'" [definitionBlock]="block">
             </app-text-question-block>
+            </ng-container>
         </div>
     </ng-template>
 
