WIP. Selecting and updating text questions works

--- a/ddp-workspace/projects/study-builder-ui/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/components/activity/activity.component.html
@@ -10,6 +10,6 @@
     </div>
   </section>
   <section class="section">
-    <app-section *ngIf="sections.length > 0"></app-section>
+    <app-section *ngIf="activity.sectionsObservables[0]" [section]="activity.sectionsObservables[0]"></app-section>
   </section>
 </main>
