--- a/ddp-workspace/projects/ddp-cgc/src/app/app.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <div class="content">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</div>
