CGC: Fix home page markup & extract translate factory to separate file

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/pages/home/home.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/pages/home/home.component.html
@@ -156,16 +156,18 @@
           {{ 'HomePage.Partners.Title' | translate }}
         </h1>
 
-        <div
-          class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12"
-        >
-          <a [href]="broadUrl" target="_blank">
-            <img
-              src="/assets/images/broad-logo.svg"
-              style="width: 100%; margin-top: 10px"
-              [alt]="'HomePage.Partners.Alt' | translate"
-            />
-          </a>
+        <div class="row">
+          <div
+            class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12"
+          >
+            <a [href]="broadUrl" target="_blank">
+              <img
+                src="/assets/images/broad-logo.svg"
+                style="width: 100%; margin-top: 10px"
+                [alt]="'HomePage.Partners.Alt' | translate"
+              />
+            </a>
+          </div>
         </div>
       </div>
     </div>
