--- a/ddp-workspace/projects/ddp-cgc/src/styles/_common.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/styles/_common.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 *,
 *::before,
 *::after {
@@ -25,4 +27,17 @@ body {
 
 .row {
   margin: 0 !important;
+}
+
+.box {
+  margin: 20px 0;
+  padding: 15px;
+
+  border-radius: 2px;
+
+  text-align: center;
+
+  &--light-blue {
+    background: $color-light-blue;
+  }
 }
