CGC: Add color vars

--- a/ddp-workspace/projects/ddp-cgc/src/styles/_typography.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/styles/_typography.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 p {
   font-family: 'Catamaran', sans-serif;
   font-size: 1rem;
@@ -25,7 +27,7 @@ h2.Title {
   margin-bottom: 15px;
 
   font-size: 1.6rem;
-  color: #7a7a7a;
+  color: $color-dark-grey;
 }
 
 h1.Title,
