--- a/ddp-workspace/projects/ddp-cgc/src/app/components/pages/learn-more/learn-more.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/pages/learn-more/learn-more.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../styles/variables';
+
 .learn-more {
   margin-top: 20px;
   padding-bottom: 45px;
@@ -24,7 +25,7 @@
 
     font-size: 1.25rem;
     text-align: center;
-    color: #efefef;
+    color: $color-light-grey;
   }
 
   &__title {
