DDP-5888 Fixed links in header

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.html
@@ -14,13 +14,13 @@
     <div class="collapse navbar-collapse header-collapse" id="menu">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-          <a class="nav-item__link" routerLink="/home">Home</a>
+          <a class="nav-item__link" [routerLink]="Route.Home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-item__link"  routerLink="/about-us">About Us</a>
+          <a class="nav-item__link"  [routerLink]="Route.AboutUs">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-item__link" routerLink="/learn-more">Learn More</a>
+          <a class="nav-item__link" [routerLink]="Route.LearnMore">Learn More</a>
         </li>
       </ul>
     </div>
