--- a/ddp-workspace/projects/ddp-cgc/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/footer/footer.component.html
@@ -12,9 +12,9 @@
   </div>
   <div _ngcontent-c2="" class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt10">
       <p _ngcontent-c2="" class="footer-text float--right">
-          <a _ngcontent-c2="" class="footer-link" routerLink="/home">Home</a>
-          <a _ngcontent-c2="" class="footer-link" routerLink="/about-us">About Us</a>
-          <a _ngcontent-c2="" class="footer-link" routerLink="/learn-more">Learn More</a>
+          <a _ngcontent-c2="" class="footer-link" [routerLink]="Route.Home">Home</a>
+          <a _ngcontent-c2="" class="footer-link" [routerLink]="Route.AboutUs">About Us</a>
+          <a _ngcontent-c2="" class="footer-link" [routerLink]="Route.LearnMore">Learn More</a>
           <button _ngcontent-c2="" class="footer-link"><i class="fa fa-arrow-up footer-arrow"></i> Back to top</button>
       </p>
   </div>
