--- a/ddp-workspace/projects/ddp-cgc/src/app/components/pages/home/home.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/pages/home/home.component.html
@@ -31,7 +31,7 @@
             class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12"
           >
             <a
-              class="button button--primary"
+              class="button button--primary button--lg"
               style="width: 100%; margin-top: 20px"
               [routerLink]="routes.PreScreening"
             >
@@ -91,7 +91,7 @@
             class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12"
           >
             <a
-              class="button button--primary-outline"
+              class="button button--primary-outline button--lg"
               style="width: 100%; margin-top: 20px"
               [routerLink]="routes.LearnMore"
             >
