--- a/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
@@ -3,7 +3,7 @@
 .button {
   display: inline-block;
 
-  padding: 15px 22px;
+  padding: 10px 20px 8px 20px;
 
   font-weight: 600;
   font-size: 1rem;
@@ -33,5 +33,9 @@
 
       color: $color-green !important;
     }
+  }
+
+  &--lg {
+    padding: 15px 22px;
   }
 }
