--- a/ddp-workspace/projects/study-builder-ui/src/app/components/text-question-block/text-question-block.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/components/text-question-block/text-question-block.component.html
@@ -1,1 +1,1 @@
-<ddp-activity-text-answer *ngIf="angularClientBlock" [block]="angularClientBlock"></ddp-activity-text-answer>
+<ddp-activity-text-answer *ngIf="angularClientBlock$ | async as angularClientBlock" [block]="angularClientBlock"></ddp-activity-text-answer>
