--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
@@ -1,3 +1,13 @@
+.overlay {
+  top: 0;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  .navbar {
+    background-color: unset!important;
+  }
+}
+
 .navbar {
   border-radius: 0;
   padding: 40px 80px;
