--- a/ddp-workspace/projects/ddp-cgc/src/app/app.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="wrapper">
   <div class="content">
-    <app-header></app-header>
+    <app-header 
+      [mode]="getHeaderMode()"
+    ></app-header>
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
