--- a/ddp-workspace/projects/study-builder-ui/src/app/components/section/section.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/components/section/section.component.html
@@ -6,7 +6,8 @@
         <div>I got {{section.blocks.length}} blocks</div>
         <ng-container *ngFor="let block$ of section.blocksSubjects; index as i">
             <div *ngIf="block$ | async as block" [ngClass]="{'selection-highlight': block === (selectedBlock$ | async)}" (click)="blockSelected(block)">
-                <app-content-block *ngIf="block.blockType === 'CONTENT'" [block]="block"></app-content-block>
+<!--                <app-content-block *ngIf="block.blockType === 'CONTENT'" [block]="block"></app-content-block>-->
+                <app-static-content-block *ngIf="block.blockType === 'CONTENT'" [definitionBlock$]="block$"></app-static-content-block>
                 <app-text-question-block *ngIf="block.blockType === 'QUESTION' && block.question.questionType === 'TEXT'"
                                          [definitionBlock$]="block$"></app-text-question-block>
             </div>
