Rare-X | DDP-6067: Display user's first and last name in top bar

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/top-bar/top-bar.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/top-bar/top-bar.component.html
@@ -1,4 +1,8 @@
 <div class="top-bar">
+  <span class="username" *ngIf="profile">
+    {{ profile.firstName }} {{ profile.lastName }}
+  </span>
+
   <nav class="top-bar__nav">
     <ul class="nav-list">
       <li *ngIf="isAuthenticated" class="nav-list__item">
