Rare-X | DDP-6083: Add page count in consent / assent

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
@@ -55,6 +55,14 @@
       </ol>
     </div>
 
+    <div class="PageContent-infobox page-count" *ngIf="isConsent">
+      {{
+        'Activities.PageCount'
+          | translate
+            : { current: currentSectionIndex + 1, total: model.sections.length }
+      }}
+    </div>
+
     <ng-container *ngIf="model">
       <div class="row NoMargin">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
