--- a/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.html
@@ -5,6 +5,10 @@
 </div>
 
 <ng-template #content>
+  <div class="PageContent-infobox logout-reminder">
+    {{ 'Common.LogoutReminder' | translate }}
+  </div>
+
   <app-notifications [messages]="messages"></app-notifications>
 
   <h1 class="title">
