Catch deletion error and present internationalized error message in rare-x dashboard

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.html
@@ -19,6 +19,10 @@
     *ngTemplateOutlet="participants.length ? participantsList : noParticipants"
   ></ng-container>
 
+  <div *ngIf="errorMessage" class="ErrorMessage">
+    <span>{{ errorMessage }}</span>
+  </div>
+
   <div class="controls">
     <button
       class="button button_primary button_medium"
