--- a/ddp-workspace/projects/ddp-cgc/src/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $color-dark-blue: #1b71b7;
 $color-light-blue: rgba(61, 152, 226, 0.3);
 
 $color-light-grey: #efefef;
+$color-light-grey-2: #eeeeee;
 $color-dark-grey: #7a7a7a;
 
 $color-text: #333333;
