DDP-5923 enrollmentStatus internationalization

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
@@ -62,7 +62,7 @@
                 {{'SDK.Prism.TableColumns.Status' | translate}}
             </mat-header-cell>
             <mat-cell *matCellDef="let element" class="status-column">
-                {{ enrollmentStatusTypeToLabel.get(element.status) }}
+                {{ enrollmentStatusTypeToLabel.get(element.status) | translate }}
             </mat-cell>
         </ng-container>
 
